--- a/index.html
+++ b/index.html
@@ -1,12 +1,346 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="La tienda online oficial del Real Madrid CF | Equipaciones, hombres, mujeres, jóvenes, accesorios y más"
+    />
+    <link rel="preload" href="./style.css" as="style" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./assets/real-madrid_109486.png" type="image/png" />
+    <title>La Tienda Oficial Real Madrid C.F.</title>
+  </head>
+  <body>
+    <header id="header" class="flex-container">
+      <section class="header-primary flex-container">
+        <h1>
+          <a
+            href="https://shop.realmadrid.com/?lang=es&utm_campaign=enlaces-tienda&utm_source=web&utm_medium=links-tienda&utm_content=menu-1%C2%BA"
+          >
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/RealMadrid_Official_Online_Store_COLOR_blacktext_510x_37d3cb70-f682-4b8a-83d4-f819439ba1e9_150x.png?v=1649857493"
+              alt="logo del Real Madrid C.F."
+            />
+          </a>
+        </h1>
+        <div class="search">
+          <form>
+            <input type="text" placeholder="Búsqueda" />
+          </form>
+        </div>
+        <div class="icons flex-container">
+          <div class="language flex-container">
+            <div class="idioms">
+              <h3>IDIOMA</h3>
+              <select id="idiom">
+                <option>ES</option>
+                <option>DE</option>
+                <option>PT</option>
+                <option>FR</option>
+                <option>EN</option>
+              </select>
+            </div>
+            <div class="selectors">
+              <h3>REGIÓN</h3>
+              <select id="selector">
+                <option>EU</option>
+                <option>UK</option>
+                <option>US</option>
+                <option>AU</option>
+                <option>CN</option>
+              </select>
+            </div>
+          </div>
+          <button class="session flex-container">
+            <img
+              src="./assets/64370a4a1c04a2bade31e1d46376270b-icono-de-trazo-de-persona-de-usuario.png"
+              alt="sign in"
+            />
+          </button>
+          <button class="bag flex-container">
+            <img src="./assets/shop.png" alt="shopping bag" />
+          </button>
+        </div>
+      </section>
+      <section class="header-secundary">
+        <nav class="nav-list">
+          <ul class="list flex-container">
+            <li><a href="#">EQUIPACIONES</a></li>
+            <li><a href="#">COMPRAR POR JUGADOR</a></li>
+            <li><a href="#">ENTRENAMIENTO</a></li>
+            <li><a href="#">MODA</a></li>
+            <li><a href="#">ACCESORIOS</a></li>
+            <li><a href="#">NAVIDAD</a></li>
+          </ul>
+        </nav>
+      </section>
+    </header>
+    <main>
+      <section id="hero" class="flex-container">
+        <div class="box flex-container">
+          <h1>NUEVA COLECCIÓN DE ABRIGOS</h1>
+          <button>COMPRAR AHORA</button>
+          <p>*PLAZO DE DEVOLUCIÓN AMPLIADO HASTA EL 15 DE ENERO.</p>
+        </div>
+      </section>
+      <section id="products">
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/home-pod-weir_535x.jpg?v=1694523452"
+              alt="primera equipación"
+            />
+          </div>
+          <h2>PRIMERA EQUIPACIÓN REAL MADRID 23/24</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/home-kit-23-24"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/away-pod-alaba_535x.jpg?v=1694523452"
+              alt="segunda equipación"
+            />
+          </div>
+          <h2>SEGUNDA EQUIPACIÓN REAL MADRID 23/24</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/away-kit-23-24"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/third-pod-bellingham_535x.jpg?v=1694523452"
+              alt="tercera equipación"
+            />
+          </div>
+          <h2>TERCERA EQUIPACIÓN REAL MADRID 23/24</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/third-kit-23-24"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/gk-pod-misa_535x.jpg?v=1694523452"
+              alt="equipación de porteros"
+            />
+          </div>
+          <h2>EQUIPACIÓN PORTERO REAL MADRID 23/24</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/goalkeeper-kits"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/Pod_Bellingham_535x.jpg?v=1701690925"
+              alt="equipaciones de Bellingham"
+            />
+          </div>
+          <h2>BELLINGHAM CAMISETAS Y EQUIPACIÓN</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/kits-football-shop-by-player-5-bellingham"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/Pod_Linda_535x.jpg?v=1701690924"
+              alt="equipaciones de Linda"
+            />
+          </div>
+          <h2>CAICEDO CAMISETAS Y EQUIPACIÓN</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/kits-football-shop-by-player-18-linda-c"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/shop_by_gender_-_male_07b7cbcb-5ec4-4a30-a889-688c135fa306_330x.jpg?v=1701162650"
+              alt="regalos para ellos"
+            />
+          </div>
+          <h2>REGALOS DE NAVIDAD PARA ELLOS</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/gifts-for-him"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/shop_by_gender_-_female_9a2ac46d-2386-44bb-bfd8-7ea6bf094504_330x.jpg?v=1701162650"
+              alt="regalos para ellas"
+            />
+          </div>
+          <h2>REGALOS DE NAVIDAD PARA ELLAS</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/gifts-for-her"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/shop_by_gender_-_youth_9124cfeb-430e-4cdf-bc8f-b6d86f92de65_330x.jpg?v=1701162650"
+              alt="regalos para niños"
+            />
+          </div>
+          <h2>REGALOS DE NAVIDAD PARA NIÑOS Y NIÑAS</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/collections/gifts-for-kids-babies"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+        <article class="product flex-container">
+          <div>
+            <img
+              src="https://shop.realmadrid.com/cdn/shop/files/RMCFMS0160-07_720x.jpg?v=1699291316"
+              alt="jersey navideño escudo"
+            />
+          </div>
+          <h2>JERSEY DE NAVIDAD ESCUDO BLANCO</h2>
+          <button class="product-button">
+            <a
+              href="https://shop.realmadrid.com/products/rmcfms0160-real-madrid-crest-xmas-jumper-navy-grey"
+              target="_blank"
+              rel="noopener"
+              >COMPRAR AHORA</a
+            >
+          </button>
+        </article>
+      </section>
+    </main>
+    <footer id="footer">
+      <div class="footer-content flex-container">
+        <div class="footer-buy">
+          <h4>Comprar</h4>
+          <ul>
+            <li><a href="#">INFO ENVÍOS NAVIDAD</a></li>
+            <li><a href="#">REGÍSTRATE Y RECIBE 5% DTO</a></li>
+            <li><a href="#">LOCALIZADOR DE TIENDAS</a></li>
+            <li><a href="#">ENVÍOS Y DEVOLUCIONES</a></li>
+            <li><a href="#">CÓMO HACER UN PEDIDO</a></li>
+            <li><a href="#">SEGUIMIENTO DE MI PEDIDO</a></li>
+            <li><a href="#">MI CUENTA</a></li>
+          </ul>
+        </div>
+        <div class="footer-about">
+          <h4>Acerca De</h4>
+          <ul>
+            <li><a href="#">POLÍTICA DE PRIVACIDAD</a></li>
+            <li><a href="#">POLÍTICA DE COOKIES</a></li>
+            <li><a href="#">TÉRMINOS Y CONDICIONES</a></li>
+          </ul>
+        </div>
+        <div class="footer-help">
+          <h4>¿Necesitas Ayuda?</h4>
+          <ul>
+            <li><a href="#">CONTÁCTANOS</a></li>
+            <li><a href="#">PREGUNTAS FRECUENTES</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="payments flex-container">
+        <h4>Pagos Aceptados</h4>
+        <ul class="list-payment flex-container">
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/Amex.png" alt="american express" />
+            </a>
+          </li>
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/apple.png" alt="apple pay" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/discover.png" alt="discover" />
+            </a>
+          </li>
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/disners.png" alt="diners club" />
+            </a>
+          </li>
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/google.png" alt="google pay" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/maestro.png" alt="maestro" />
+            </a>
+          </li>
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/mastercard.png" alt="mastercard" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/union.png" alt="union pay" />
+            </a>
+          </li>
+          <li class="item-pay">
+            <a href="#">
+              <img src="./assets/visa.png" alt="visa" />
+            </a>
+          </li>
+        </ul>
+      </div>
+      <p class="footer-end">
+        Real Madrid CF EU Tienda &copy;2023 Todos los derechos reservados.
+      </p>
+    </footer>
+  </body>
 </html>
